--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@huggingface/tokenizers": "^0.19.0",
+    "onnxruntime-node": "^1.x.x",
     "axios": "^1.6.8",
     "express": "^4.18.2",
     "pdf-parse": "^1.1.1"
