--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "@huggingface/tokenizers": "^0.19.0",
-    "onnxruntime-node": "^1.x.x",
+    "onnxruntime-node": "^1.17.1",
     "axios": "^1.6.8",
     "express": "^4.18.2",
     "pdf-parse": "^1.1.1"
