--- a/package.json
+++ b/package.json
@@ -1,15 +1,9 @@
 {
-  "name": "gemini-doc-qa",
-  "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
   "dependencies": {
-    "@huggingface/tokenizers": "^0.19.0",
-    "onnxruntime-node": "^1.17.1",
-    "axios": "^1.6.8",
-    "express": "^4.18.2",
-    "pdf-parse": "^1.1.1"
+    "axios": "^1.10.0",
+    "express": "^5.1.0",
+    "onnxruntime-node": "^1.22.0-rev",
+    "pdf-parse": "^1.1.1",
+    "tokenizers": "^0.13.3"
   }
 }
