--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "express": "^5.1.0",
     "onnxruntime-node": "^1.22.0-rev",
     "pdf-parse": "^1.1.1",
-    "tokenizers": "^0.13.3"
+    "@xenova/transformers": "^2.17.2"
   }
 }
