--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
+  "name": "gemini-doc-qa",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "axios": "^1.10.0",
-    "express": "^5.1.0",
-    "onnxruntime-node": "^1.22.0-rev",
-    "pdf-parse": "^1.1.1",
-    "@xenova/transformers": "^2.17.2"
+    "axios": "^1.6.8",
+    "express": "^4.18.2",
+    "pdf-parse": "^1.1.1"
   }
 }
